--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="./dist/styles/main.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Where to eat</title>
 </head>
+<style>
+    body {
+        background-image: url("./images/background.png");
+        background-repeat: repeat;
+    }
+</style>
 
 <body>
     <div id="root"></div>
