readme updated, link up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <style>
     body {
-        background-image: url("./images/background.png");
+        background-image: url("./resources/images/background.png");
         background-repeat: repeat;
     }
 </style>
